Criando DTO de aulas(LessonDTO). Refatorando problemas apresentados pelo SonarLint. Adicionando anotacao para remover Recursao de chamadas getObject() no JSON.